change up tinkering

--- a/tool/wow-tinkering.html
+++ b/tool/wow-tinkering.html
@@ -1,3 +1,5 @@
+
+Just open your IDE cs50 to see the actual code.
 Day 1: Learn how to use
 <link rel="stylesheet" href="css/animate.css">
 <script src="js/wow.min.js"></script>
@@ -22,3 +24,17 @@ It now works because I ended up allowing the code work by adding the start code.
 
     <section class="wow slideInRight" data-wow-offset="10"  data-wow-iteration="10">
     </section>
+
+Day 2:
+<div class="animate__animated animate__bounce animate__repeat-2">Example</div>
+This would allow you to make your code bounce. In very cool right it also is a animate.css
+.my-element {
+    --animate-repeat: 2;
+  }
+  This would make your element repeat.
+  <body>
+    <main class="animate__animated animate__fadeInLeft">
+        This would allow your code to be able to fade in from the left.
+    </main>
+  </body>
+
