--- a/tool/wow-tinkering.html
+++ b/tool/wow-tinkering.html
@@ -37,4 +37,6 @@ This would allow you to make your code bounce. In very cool right it also is a a
         This would allow your code to be able to fade in from the left.
     </main>
   </body>
-
+Day 3:
+What I found intresting is that there are so much codes that could animate the code. For example pulse this would allow you to make the code like a heart beat you just insert pulse into the code and have fun.
+Another example is rubber band allow the code to act like a rubber band.
