--- a/index.html
+++ b/index.html
@@ -11,6 +11,38 @@
             /* CSS */
 
         </style>
+            <body class="d-flex flex-column h-100">
+              <main class="flex-shrink-0">
+                  <!-- Navigation-->
+                  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                      <div class="container px-5">
+                          <a class="navbar-brand" href="index.html">Start your Accoutning Journey</a>
+                          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                  <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                                  <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                                  <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                  <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+                                  <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+                                  <li class="nav-item dropdown">
+                                      <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
+                                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                                          <li><a class="dropdown-item" href="blog-home.html">Blog Home</a></li>
+                                          <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
+                                      </ul>
+                                  </li>
+                                  <li class="nav-item dropdown">
+                                      <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
+                                      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
+                                          <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
+                                          <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
+                                      </ul>
+                                  </li>
+                              </ul>
+                          </div>
+                      </div>
+                  </nav>
 
         <title>Title</title>
     </head>
@@ -87,7 +119,63 @@
               </head>
               <body class="d-flex flex-column">
                   <main class="flex-shrink-0">
-              
+                    <div class="grid text-center">
+                    </div>
+
+
+
+
+                    <div class="accordion" id="accordionExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            What exactly is accoutning?
+                          </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            Accouting is the process of keeping track of all financial transactions within a buisness which could include the income of money and how well or bad the company might be doing. For example if you own a company and the company is doing bad then the accountant would let who ever is in charge know and sometimes even fix it themselves. According to forbes.com they say that According to forbes.com it said that "It provides a clear picture of the financial health of your organization and its performance, which can serve as a catalyst for resource management and strategic growth."
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Why is accoutning so important?
+                          </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            Accoutning is really important because it would allow a company to not fall and would allow the company to stay in buisness. According to forbes.com they say "that Accounting information exposes your company’s financial performance; it tells whether you’re making a profit or just running into losses at the end of the day. This information is not just available to you, but also to external users such as investors, stakeholders and creditors who would want to be enlightened about your business, to figure out whether it’ll be a good choice to invest in and what they can expect in returns. Besides playing a key role in providing transparency for stakeholders, accounting also ensures you make informed decisions backed by data.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              What are some inventions that you came up with?
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              Some inventions that I came out with was making a computer that would enable you to be able to make accounting work smoother is a computer that you input the workers name and their tag (which the employers would end up giving the employees when they would give them the job)cde 
+                            </div>
+                          </div>
+                        </div>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+
+
+
+                     <h1></h1>
+                     <p1></p1>
                       <!-- Page content-->
                       <section class="py-5">
                           <div class="container px-5">
