--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <body class="d-flex flex-column h-100">
               <main class="flex-shrink-0">
                   <!-- Navigation-->
-                 
+
 
         <title>Title</title>
     </head>
@@ -143,11 +143,13 @@
                       </div>
                     </div>
 
-
-
-
-                     <h1></h1>
-                     <p1></p1>
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                      <label class="form-check-label" for="flexCheckChecked">
+                        CHeck this if my page helped you knmow more about accoutning
+                      </label>
+                    </div>
+                     <p1>Enjoy learning about accounting.</p1>
                       <!-- Page content-->
                       <section class="py-5">
                           <div class="container px-5">
@@ -245,6 +247,7 @@
                   <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
               </body>
           </html>
+
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
