--- a/index copy.html
+++ b/index copy.html
@@ -145,13 +145,13 @@
                     <div id="carouselExample" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="Accoutning robot.jpeg" class="d-block w-50" alt="...">
+                          <img src="Accounting robot.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="robot.jpeg" class="d-block w-50" alt="...">
+                          <img src="robot.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="Robot.jpeg" class="d-block w-50" alt="...">
+                          <img src="Robot.jpeg" class="Accoutning robot.jpeg" alt="...">
                         </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
