--- a/index.html
+++ b/index.html
@@ -19,57 +19,35 @@
         <title>Title</title>
     </head>
     <body>
-        <!-- HTML -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      ABOUT US
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">When did we become a</a></li>
-                      <li><a class="dropdown-item" href="#">Who are we?</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">About us?</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Plan A</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-          <img src="" class="img-fluid" alt="">
-          <div class="container text-center">
-            <div class="row align-items-start">
-              <div class="col">
-                How does Accoutning work??
-              </div>
-              <div class="col">
-                What are some inventions that I came up with?
-              </div>
-              <div class="col">
-                Plan A? Plan B?
-              </div>
-            </div>
-          </div>
+      <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
+        <div class="bg-dark p-4">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="https://www.investopedia.com/terms/a/accounting.asp#:~:text=Error%20Code%3A%20100013)-,What%20Is%20Accounting%3F,regulators%2C%20and%20tax%20collection%20entities.">How does Accounting work?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.forbes.com/advisor/business/what-is-accounting/">What is accounting?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Plan A?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Plan B?</a>
+            </li>
+          </ul>
+          <h5 class="text-body-emphasis h4">Collapsed content</h5>
+          <span class="text-body-secondary">Toggleable via the navbar brand.</span>
+        </div>
+      </div>
+      <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+
+
           <!DOCTYPE html>
           <html lang="en">
               <head>
@@ -96,14 +74,51 @@
 
 
 
-
                     <div class="accordion" id="accordionExample">
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Accordion Item #1
+                          </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Accordion Item #2
+                          </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Accordion Item #3
+                          </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion" id="accordionExample" id="animate__rubberBand">
                       <div class="accordion-item">
                         <h2 class="accordion-header">
                           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             What exactly is accoutning?
                           </button>
-                        </h2>
+                       </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                           <div class="accordion-body">
                             Accouting is the process of keeping track of all financial transactions within a buisness which could include the income of money and how well or bad the company might be doing. For example if you own a company and the company is doing bad then the accountant would let who ever is in charge know and sometimes even fix it themselves. According to forbes.com they say that According to forbes.com it said that "It provides a clear picture of the financial health of your organization and its performance, which can serve as a catalyst for resource management and strategic growth."
@@ -142,16 +157,53 @@
                         </div>
                       </div>
                     </div>
+
+
+
+                    <div class="container text-center">
+                      <div class="row align-items-start">
+                        <div class="col">
+                          <div class="card" style="width: 18rem;">
+                            <img src="accounting24.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">More on accounting</h5>
+                              <p class="card-text">Accouting as shown in the picture is the tracking of the financial transactions within a company..</p>
+                              <a href="https://www.netsuite.com/portal/resource/articles/accounting/types-of-accountants.shtml#:~:text=Public%20accountants%20work%20with%20external,that%20is%20hard%20to%20obtain." class="btn btn-primary">Net Suite</a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card" style="width: 18rem;">
+                            <img src="accouting23.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">What do you do in accouting</h5>
+                              <p class="card-text">Accounting of course has a lot of math usage in it because it keeps track and gives ideas finacally for the company to work better.</p>
+                              <a href="https://www.regenesys.net/reginsights/what-math-do-you-need-for-accounting#:~:text=Accountants%20must%20be%20proficient%20in,revenues%2C%20expenses%2C%20and%20profits." class="btn btn-primary">Regin sights</a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card" style="width: 18rem;">
+                            <img src="accounting25.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Steps in accouting</h5>
+                              <p class="card-text">There are alot of steps for the accouting proccess.</p>
+                              <a href="https://tipalti.com/accounting-hub/accounting-cycle/" class="btn btn-primary">Tipalti</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                     <div id="carouselExample" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="Accoutning robot.jpeg" class="d-block w-50" alt="...">
+                          <img src="Accoutning robot.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="robot.jpeg" class="d-block w-50" alt="...">
+                          <img src="robot.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                          <img src="Robot.jpeg" class="d-block w-50" alt="...">
+                          <img src="Robot.jpeg" class="d-block w-100" alt="...">
                         </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
