--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   <!-- Navigation-->
 
 
-        <title>Title</title>
+
     </head>
     <body>
       <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
@@ -25,6 +25,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="https://www.investopedia.com/terms/a/accounting.asp#:~:text=Error%20Code%3A%20100013)-,What%20Is%20Accounting%3F,regulators%2C%20and%20tax%20collection%20entities.">How does Accounting work?</a>
             </li>
+            <title>Accoutning</title>
             <li class="nav-item">
               <a class="nav-link" href="https://www.forbes.com/advisor/business/what-is-accounting/">What is accounting?</a>
             </li>
@@ -35,8 +36,8 @@
               <a class="nav-link" href="">Plan B?</a>
             </li>
           </ul>
-          <h5 class="text-body-emphasis h4">Collapsed content</h5>
-          <span class="text-body-secondary">Toggleable via the navbar brand.</span>
+          <h5 class="text-body-emphasis h1">Welcome to the world of accounting </h1>
+          <span class="text-body-secondary">Where I show you how accounting works.</span>
         </div>
       </div>
       <nav class="navbar navbar-dark bg-dark">
@@ -79,13 +80,13 @@
                           </button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                          <div class="accordion-body"> Accouting is the process of keeping track of all financial transactions within a buisness which could include the income of money and how well or bad the company might be doing. For example if you own a company and the company is doing bad then the accountant would let who ever is in charge know and sometimes even fix it themselves. According to forbes.com they say that According to forbes.com it said that "It provides a clear picture of the financial health of your organization and its performance, which can serve as a catalyst for resource management and strategic growth."</div>
+                          <div class="accordion-body"> Accounting is the process of keeping track of all financial transactions within a buisness which could include the income of money and how well or bad the company might be doing. For example if you own a company and the company is doing bad then the accountant would let who ever is in charge know and sometimes even fix it themselves. According to forbes.com they say that According to forbes.com it said that "It provides a clear picture of the financial health of your organization and its performance, which can serve as a catalyst for resource management and strategic growth."</div>
                         </div>
                       </div>
                       <div class="accordion-item">
                         <h2 class="accordion-header">
                           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            Why is accoutning so important?
+                            Why is accounting so important?
                           </button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -132,7 +133,7 @@
                             <img src="accounting24.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">More on accounting</h5>
-                              <p class="card-text">Accouting as shown in the picture is the tracking of the financial transactions within a company..</p>
+                              <p class="card-text">Accounting as shown in the picture is the tracking of the financial transactions within a company..</p>
                               <a href="https://www.netsuite.com/portal/resource/articles/accounting/types-of-accountants.shtml#:~:text=Public%20accountants%20work%20with%20external,that%20is%20hard%20to%20obtain." class="btn btn-primary">Net Suite</a>
                             </div>
                           </div>
@@ -141,7 +142,7 @@
                           <div class="card" style="width: 18rem;">
                             <img src="accouting23.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">What do you do in accouting</h5>
+                              <h5 class="card-title">What do you do in accounting</h5>
                               <p class="card-text">Accounting of course has a lot of math usage in it because it keeps track and gives ideas finacally for the company to work better.</p>
                               <a href="https://www.regenesys.net/reginsights/what-math-do-you-need-for-accounting#:~:text=Accountants%20must%20be%20proficient%20in,revenues%2C%20expenses%2C%20and%20profits." class="btn btn-primary">Regin sights</a>
                             </div>
@@ -151,8 +152,8 @@
                           <div class="card" style="width: 18rem;">
                             <img src="accounting25.jpeg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Steps in accouting</h5>
-                              <p class="card-text">There are alot of steps for the accouting proccess.</p>
+                              <h5 class="card-title">Steps in accounting</h5>
+                              <p class="card-text">There are alot of steps for the accounting proccess.</p>
                               <a href="https://tipalti.com/accounting-hub/accounting-cycle/" class="btn btn-primary">Tipalti</a>
                             </div>
                           </div>
